--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,11 +18,14 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+
     background-color: var(--color-background-primary);
     padding: 20px 0; 
     width: 100%;
+
     font-size: 18px;
     font-weight: 300;
+
     color: var(--color-text-primary);
     line-height: 1.6;
     transition: background-color 0.3s ease;
@@ -37,10 +40,12 @@ body {
 header {
     display: flex;
     align-items: center;
+
     margin-bottom: 50px;
     background-color: var(--color-background-secondary);
     padding: 20px 30px; 
     border-radius: 12px;
+
     box-shadow: var(--shadow-light);
     animation: fadeIn 0.8s ease-out;
 }
@@ -66,7 +71,9 @@ header {
 .search-bar {
     width: 100%;
     padding: 12px 20px;
+
     font-size: 18px;
+
     border-radius: 30px; 
     border: 2px solid var(--color-accent-primary);
     font-weight: 300;
@@ -90,13 +97,17 @@ header {
     position: absolute;
     top: calc(100% + 5px); 
     left: 0;
+
     width: 100%;
     max-height: 300px;
     overflow-y: auto;
+
     background-color: var(--color-card-bg);
+
     border: 1px solid var(--color-accent-primary);
     border-radius: 0 0 8px 8px;
     z-index: 1000;
+    
     display: none;
     padding: 0;
     box-shadow: var(--shadow-light);
@@ -158,21 +169,19 @@ h2 {
 }
 
 .movie-cards {
-    display: flex;
+    display: grid; 
     gap: 30px;
-    flex-wrap: nowrap;
-    overflow-x: auto;
+    
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    
     padding-bottom: 20px;
+
     scrollbar-color: var(--color-accent-primary) var(--color-background-secondary);
     scrollbar-width: thin;
 }
 
-
-
 .movie-card {    
-    width: 300px; 
     height: 450px;
-    flex-shrink: 0;
     background-color: var(--color-card-bg);
     border-radius: 12px;
     position: relative;
@@ -214,57 +223,6 @@ footer {
     color: var(--color-accent-primary);
     text-decoration: underline;
     transition: color 0.3s ease;
-}
-
-
-
-@media (max-width: 1024px) {
-    .container {
-        padding: 0 20px; 
-    }
-
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .logo img {
-        height: 90px; 
-        margin-bottom: 20px;
-        margin-right: 0;
-    }
-
-    .search-container {
-        width: 100%;
-        max-width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-    body {
-        padding: 15px 0;
-    }
-
-    .container {
-        padding: 0 15px;
-    }
-    
-    h2 {
-        font-size: 28px;
-    }
-
-
-
-  
-
-    .genre-links {
-        gap: 15px;
-        flex-wrap: wrap;
-    }
-
-    .genre-links a {
-        font-size: 18px;
-    }
 }
 
 @keyframes fadeIn {
